--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="your-photo.jpg" alt="Your Photo" />
       </div>
       <div class="content">
-        <h1>Will you be my Valentine?</h1>
+        <h1>To the prettiest boy in the world, Will you be my Valentine?</h1>
         <div class="buttons">
           <button class="yes-button" onclick="showDancingCat()">Yes</button>
           <button class="no-button" onclick="tryAgain()">No</button>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="try-again">
-      <p>Try again! 💔</p>
+      <p>Try again!</p>
     </div>
 
     <script src="script.js"></script>
