--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="image">
-        <img src="your-photo.jpg" alt="Your Photo" />
+        <img src="FullSizeRender.JPG" alt="Your Photo" />
       </div>
       <div class="content">
         <h1>To the prettiest boy in the world, Will you be my Valentine?</h1>
