--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div class="image">
-        <img src="FullSizeRender.JPG" alt="Your Photo" />
+        <img src="your-photo.jpg" alt="Your Photo" />
       </div>
       <div class="content">
         <h1>To the prettiest boy in the world, Will you be my Valentine?</h1>
@@ -21,10 +21,7 @@
     </div>
 
     <div class="dancing-cat">
-      <img
-        src="https://media.giphy.com/media/3oriO0OEd9QIDdllqo/giphy.gif"
-        alt="Dancing Cat"
-      />
+      <img src="https://tenor.com/bK251.gif" alt="Dancing Cat" />
     </div>
 
     <div class="try-again">
