--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
         <img src="FullSizeRender.JPG" alt="Your Photo" />
       </div>
       <div class="content">
-        <h1>To the prettiest boy in the world, Will you be my Valentine?</h1>
+        <h1>
+          To the prettiest boy in the world, <br />Will you be my Valentine?
+        </h1>
         <div class="buttons">
           <button class="yes-button" onclick="showDancingCat()">Yes</button>
           <button class="no-button" onclick="tryAgain()">No</button>
