--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     </div>
 
     <div class="dancing-cat">
-      <img src="https://tenor.com/bK251.gif" alt="Dancing Cat" />
+      <img
+        src="https://tenor.com/en-GB/view/gianbortion-cat-dance-gif-23567307"
+        alt="Dancing Cat"
+      />
     </div>
 
     <div class="try-again">
