--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="dancing-cat">
       <img
-        src="https://tenor.com/en-GB/view/gianbortion-cat-dance-gif-23567307"
+        src="https://media.tenor.com/images/c906ea502c1f4f0357f54c5be007ec66/tenor.gif"
         alt="Dancing Cat"
       />
     </div>
