--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Valentine Question</title>
+    <title>Will you be my Valentine, pretty boy?</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,9 +16,9 @@
         <img src="FullSizeRender.JPG" alt="Your Photo" />
       </div>
       <div class="content">
-        <h1>
+        <h3>
           To the prettiest boy in the world, <br />Will you be my Valentine?
-        </h1>
+        </h3>
         <div class="buttons">
           <button class="yes-button" onclick="showDancingCat()">Yes</button>
           <button class="no-button" onclick="tryAgain()">No</button>
