--- a/index.html
+++ b/index.html
@@ -27,10 +27,25 @@
     </div>
 
     <div class="dancing-cat">
-      <img
-        src="https://media.tenor.com/images/c906ea502c1f4f0357f54c5be007ec66/tenor.gif"
-        alt="Dancing Cat"
-      />
+      <div
+        class="tenor-gif-embed"
+        data-postid="23567307"
+        data-share-method="host"
+        data-aspect-ratio="1"
+        data-width="100%"
+      >
+        <a href="https://tenor.com/view/gianbortion-cat-dance-gif-23567307"
+          >Gianbortion Cat Sticker</a
+        >from
+        <a href="https://tenor.com/search/gianbortion-stickers"
+          >Gianbortion Stickers</a
+        >
+      </div>
+      <script
+        type="text/javascript"
+        async
+        src="https://tenor.com/embed.js"
+      ></script>
     </div>
 
     <div class="try-again">
