--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="content">
         <h3>
-          To the prettiest boy in the world, <br />Will you be my Valentine?
+          Dear prettiest boy in the world, <br />Will you be my Valentine?
         </h3>
         <div class="buttons">
           <button class="yes-button" onclick="showDancingCat()">Yes</button>
