--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="try-again">
-      <p>Try again!</p>
+      <p>NE, MILO, PROBVAI PAK</p>
     </div>
 
     <script src="script.js"></script>
