--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       </div>
     </div>
 
+    <!-- Dancing cat GIF initially hidden -->
     <div class="dancing-cat">
       <div
         class="tenor-gif-embed"
