--- a/index.html
+++ b/index.html
@@ -26,27 +26,11 @@
       </div>
     </div>
 
-    <!-- Dancing cat GIF initially hidden -->
     <div class="dancing-cat">
-      <div
-        class="tenor-gif-embed"
-        data-postid="23567307"
-        data-share-method="host"
-        data-aspect-ratio="1"
-        data-width="100%"
-      >
-        <a href="https://tenor.com/view/gianbortion-cat-dance-gif-23567307"
-          >Gianbortion Cat Sticker</a
-        >from
-        <a href="https://tenor.com/search/gianbortion-stickers"
-          >Gianbortion Stickers</a
-        >
-      </div>
-      <script
-        type="text/javascript"
-        async
-        src="https://tenor.com/embed.js"
-      ></script>
+      <img
+        src="https://media.tenor.com/images/5e5d111607d8c9c58a58f09c8ef8f9f1/tenor.gif"
+        alt="Dancing Cat"
+      />
     </div>
 
     <div class="try-again">
