--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <img
         src="https://media.tenor.com/images/5e5d111607d8c9c58a58f09c8ef8f9f1/tenor.gif"
         alt="Dancing Cat"
+        style="max-width: 100%; height: auto"
       />
     </div>
 
