--- a/index.html
+++ b/index.html
@@ -27,11 +27,26 @@
     </div>
 
     <div class="dancing-cat">
-      <img
-        src="https://media.tenor.com/images/5e5d111607d8c9c58a58f09c8ef8f9f1/tenor.gif"
-        alt="Dancing Cat"
-        style="max-width: 100%; height: auto"
-      />
+      <div
+        class="tenor-gif-embed"
+        data-postid="753221407762395964"
+        data-share-method="host"
+        data-aspect-ratio="0.92827"
+        data-width="100%"
+      >
+        <a
+          href="https://tenor.com/view/meme-cat-cat-meme-happy-happy-happy-cat-meme-gif-753221407762395964"
+          >Meme Cat Cat Meme Sticker</a
+        >from
+        <a href="https://tenor.com/search/meme+cat-stickers"
+          >Meme Cat Stickers</a
+        >
+      </div>
+      <script
+        type="text/javascript"
+        async
+        src="https://tenor.com/embed.js"
+      ></script>
     </div>
 
     <div class="try-again">
