--- a/index.html
+++ b/index.html
@@ -27,26 +27,7 @@
     </div>
 
     <div class="dancing-cat">
-      <div
-        class="tenor-gif-embed"
-        data-postid="753221407762395964"
-        data-share-method="host"
-        data-aspect-ratio="0.92827"
-        data-width="100%"
-      >
-        <a
-          href="https://tenor.com/view/meme-cat-cat-meme-happy-happy-happy-cat-meme-gif-753221407762395964"
-          >Meme Cat Cat Meme Sticker</a
-        >from
-        <a href="https://tenor.com/search/meme+cat-stickers"
-          >Meme Cat Stickers</a
-        >
-      </div>
-      <script
-        type="text/javascript"
-        async
-        src="https://tenor.com/embed.js"
-      ></script>
+      <img src="cat.GIF" alt="Your Photo" />
     </div>
 
     <div class="try-again">
